# wie

./: Cargo.toml  NOTICE  Optimization ROADMAP.md  README.md  repomix-output.xml
.github/workflows/: ci.yml
crates/wie-cli/src/: main.rs
crates/wie-cpu/: Cargo.toml
crates/wie-cpu/src/: exec.rs  iced_cpu.rs  lib.rs  mem.rs
crates/wie-cpu/src/jit/: block.rs  fast_api.rs  lower.rs  mod.rs  trampolines.rs
crates/wie-cpu/src/mem/: arena.rs  backend.rs  mmap_arena.rs  mmap_page.rs  mod.rs  oracle.rs  pagemap.rs  region.rs
crates/wie-pe/src/: lib.rs
crates/wie-runtime/src/: guest_heap_accel.rs  guest_io.rs  guest_mbwc.rs  guest_rewire.rs  guest_stubs.rs  hooks.rs  memory.rs  mt_runtime.rs  session.rs  trace.rs
crates/wie-winapi/src/: d3d9.rs  dispatch_table.rs  dynamic_apis.rs  fake_va.rs  kernel32.rs  lib.rs  sync_obj.rs  ucrt.rs
docs/: RUNBOOK.md  mt-threads.md  phase4-code-invalidation.md  phase4-foundation.md  phase4-jit-coherency.md  phase4-region-pins.md  phase5-guest-stubs.md  phase7-hardening.md
scripts/: run-micro-suite.sh
