[package]
name = "wie-cpu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WIE CPU engine trait and backends (Cranelift JIT default; iced interpreter)"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
libc = "0.2"
# Slim iced: decoder + Register helpers; drop encoder/formatters.
# no_xop / no_d3now: unused on PE64 MSVC paths (saves a little table RAM).
# Keep VEX/EVEX — CRT and many PE64s need them at decode time.
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "instr_info", "no_xop", "no_d3now"] }
# Phase 2: host-native block JIT (Apple Silicon = ARM64)
cranelift = "0.133"
cranelift-codegen = "0.133"
cranelift-jit = "0.133"
cranelift-native = "0.133"
cranelift-module = "0.133"

[lints]
workspace = true
